@startuml

hide circle
skinparam classAttributeIconSize 0

class ControlJuego {
    -nivelEnJuego:int
    +redibujaNivelActual()
    +partida()
    +cargaNiveles()
}

interface CargadorNiveles <<interface>> {
    +carga():List<Nivel>
}

ArchivoMalFormateadoException <.. CargadorNiveles: puede lanzar
ControlJuego -right-> CargadorNiveles: cargador

CargadorNiveles <|.. CargadorMemoria

CargadorMemoria ..> DatosNiveles: usa

CargadorNiveles <|.. CargadorDisco

class CargadorDisco {
    -rutaFichero:String
}

class ControlJuego {
    -nivelEnJuego:int
    +redibujaNivelActual()
    +partida()
    +cargaNiveles()
}


IOException <.down. CargadorDisco: puede lanzar

@enduml